# shuttleai-discord

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  icon.icns  index.html  main.js  main.py  output.css  package-lock.json  package.json  preload.js  pyproject.toml  requirements.txt  setup.py  shuttleai-version.json  tailwind.config.js  test-sync.py  test-syncr.py  test.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build_publish.yaml  stale.yml
backend/: bot.py  shuttle.py
cogs/commands/: gif.py  help.py  imagine.py  music.py  ping.py  premium.py  remove.py  reset.py  settings.py  setup.py  summary.py
cogs/events/: message.py
etc/cache/contributors/: list.json
etc/tools/: clean.py  contributors.py  key.py
examples/: async_chat_context_manager.py  async_chat_no_streaming.py  async_chat_with_streaming.py  async_list_models.py  audio_speech.py  chat_get_meta.py  chat_no_streaming.py  chat_with_image.py  chat_with_streaming.py  chatbot_with_streaming.py  ez_chat.py  fetch_model.py  list_models.py  list_models_verbose.py  tool_calling.py  tool_calling_with_internet.py  tool_calling_with_reminders.py  tool_calling_with_shuttleai.py
shuttleai/: __init__.py  _patch.py  _types.py  cli.py  exceptions.py  helpers.py  log.py  spy_orjson.py
shuttleai-old/: Makefile  README.md  __init__.py  requirements.txt  setup.py  test-sync.py
shuttleai-old/client/: _async.py  _sync.py
shuttleai-old/schemas/: __init__.py  test-tools.py
shuttleai.egg-info/: entry_points.txt
shuttleai/cli/: __main__.py
shuttleai/client/: __init__.py  _async.py  _sync.py  base.py
shuttleai/helpers/: tool_calls.py
shuttleai/resources/: __init__.py  _resource.py  chat.py  common.py  embeddings.py  images.py  moderations.py
shuttleai/resources/_async/: chat.py
shuttleai/resources/_sync/: chat.py
shuttleai/resources/audio/: audio.py  speech.py  transcriptions.py  translations.py
shuttleai/resources/chat/: completions.py
shuttleai/resources/etc/: insults.py  jokes.py  web_search.py
shuttleai/resources/images/: generations.py
shuttleai/schemas/: chat_completion.py  common.py  embeddings.py  images_generations.py  moderations.py  schemas.py
shuttleai/schemas/audio/: speech.py  transcriptions.py  translations.py
shuttleai/schemas/chat/: completions.py
shuttleai/schemas/etc/: insults.py  jokes.py  web_search.py
shuttleai/schemas/images/: generations.py
shuttleai/schemas/models/: capabilities.py  models.py
src/shuttleai/: __init__.py  cli.py  log.py  shuttleai.py  shuttleai_async.py
src/shuttleai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/shuttleai/client/: _async.py  _sync.py  _syncr.py
src/shuttleai/models/: __init__.py  _models.py
src/shuttleai/schemas/: __init__.py  schemas.py
tests/: conftest.py  test_chat.py  test_list_models.py  test_list_models_verbose.py
utils/: __init__.py  chat_channels.py  conversations.py  env.py  log.py  mongodb.py  prompts.py  settings.py
