[tool.poetry]
name = "shuttleai"
version = "0"
description = "Access Shuttle AI's API via an easy-to-use Python wrapper. Dashboard: https://shuttleai.app Discord: https://discord.gg/shuttleai"
authors = ["Tristan Liu <tristan@shuttleai.app>", "Christian \"Thoth\" Heru <chris@shuttleai.app>"]
readme = "README.md"

[tool.poetry-version-plugin]
source = "init"

[tool.ruff]
select = ["E", "F", "W", "Q", "I"]
ignore = ["E203"]
fixable = ["ALL"]
unfixable = []
line-length = 120
extend-select = ["B"]

[tool.mypy]
disallow_untyped_defs = true
show_error_codes = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
exclude = ["docs", "tests", "examples", "tools", "build"]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.9.5"
orjson = "^3.10.3"
pydantic = "^2.7.2"
httpx = ">= 0.25.2, < 1"
python-dateutil = "^2.9.0.post0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"
black = "^24.4.2"
mypy = "^1.7.1"
types-requests = "^2.31.0.10"
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
